# Minecraft

./: .gitignore  CMakeLists.txt  LICENSE  README.md  premake5.lua
Binaries/Alpha v01/Windows/Shaders/: BlockRendererVertex.glsl  CloudFrag.glsl  CubeRendererFrag.glsl  ParticleVert.glsl
Binaries/Alpha v01/Windows/Shaders/UI/: UIElementVert.glsl
Binaries/Pre Alpha v01/Shaders/: SkyboxFrag.glsl
Binaries/Pre Alpha v01/Shaders/Old/: CloudShaderFrag.glsl
Binaries/Pre Alpha v01/Shaders/UI/: UIElementFrag.glsl
Binaries/Pre Alpha v01/Windows/Resources/Project Files/: 64x64_sheet.aseprite  font.aseprite
Binaries/Pre Alpha v01/Windows/Shaders/: BlockRendererFrag.glsl  CloudVert.glsl  LightingFrag.glsl  ModelRendererFrag.glsl
Binaries/Pre Alpha v01/Windows/Shaders/Old/: CloudShaderVert.glsl
Binaries/Pre Alpha v01/Windows/Shaders/UI/: UITextFrag.glsl
Binaries/VR_0.01/Resources/: Atlas.ase
Binaries/VR_0.01/Shaders/: BlockRendererVertex.glsl
Binaries/VR_0.02/Resources/Project Files/: crossheir.ase
Binaries/VR_0.02/Shaders/: 2DElementShaderFrag.glsl  CubeRendererVert.glsl
Binaries/VR_0.03/ChunkData/: -1,1  Readme.txt
Binaries/VR_0.03/Shaders/: BlockRendererVertex.glsl  SkyboxFrag.glsl
Binaries/V_01/Shaders/: BlockRendererFrag.glsl  BlockRendererVertex.glsl  LightingVert.glsl  ModelRendererVertex.glsl
CMake/: CMakeLists.txt
Patches/Linux/: credits.txt  linux.patch
Ref/: Readme.txt
Source/: CMakeLists.txt  Minecraft Clone.sln  Minecraft.cpp  OpenGL Template.cpp  OpenGL Template.vcxproj  OpenGL Template.vcxproj.filters  main.cpp
Source/Core/: Block.h  BlockDatabase.cpp  BlockDatabase.h  BlockTextureManager.cpp  BlockTextureManager.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  ChunkFileHandler.cpp  ChunkFileHandler.h  ChunkMesh.cpp  ChunkMesh.h  CubeRenderer.cpp  CubeRenderer.h  FpsCamera.cpp  FpsCamera.h  OrthographicCamera.cpp  OrthographicCamera.h  TextureAtlas.cpp  TextureAtlas.h  main.cpp
Source/Core/Application/: Application.cpp  Application.h  EventStructs.h  Events.cpp  Events.h  PlatformSpecific.cpp  PlatformSpecific.h
Source/Core/Audio/: Audio.h  OpenALFunctions.h  alut.h
Source/Core/Clouds/: Cloud.cpp  Cloud.h  CloudGenerator.cpp  CloudGenerator.h
Source/Core/Clouds/Old Clouds/: Cloud.cpp  Cloud.h
Source/Core/Dependencies/imgui/: imgui_impl_glfw.cpp  imgui_impl_glfw_gl3.cpp  main.cpp
Source/Core/File Handling/: ChunkFileHandler.cpp  ChunkFileHandler.h  WorldFileHandler.cpp  WorldFileHandler.h
Source/Core/Lighting/: Lighting.h  Readme.txt
Source/Core/Maths/: Frustum.cpp  Frustum.h  Plane.h
Source/Core/Models/: Model.h
Source/Core/OpenGL Classes/: CubeTextureMap.cpp  CubeTextureMap.h  Fps.cpp  Fps.h  Framebuffer.cpp  Framebuffer.h  GLDebug.cpp  GLDebug.h  IndexBuffer.cpp  IndexBuffer.h  Random.cpp  Random.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h
Source/Core/Particle System/: Particle.h  ParticleSystem.cpp  ParticleSystem.h
Source/Core/Physics/: AABB.cpp  AABB.h
Source/Core/Player/: Player.cpp  Player.h
Source/Core/Renderer/: Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h
Source/Core/Resources/: Atlas32x32.ase
Source/Core/Shaders/: SkyboxFrag.glsl  SkyboxVertex.glsl  fragment.glsl  vertex.glsl
Source/Core/UI/: GUI.cpp  GUI.h
Source/Core/Utils/: Defs.h  Enums.h  Logger.cpp  Logger.h  Physics.h  Random.h  Ray.h  Raycast.cpp  Raycast.h  Timer.h  Vertex.h
Source/Core/World/: Biome.h  Skybox.cpp  Skybox.h  World.cpp  World.h  WorldGenerator.cpp  WorldGenerator.h  WorldGeneratorType.h
Source/Core/World/Structures/: WorldStructures.cpp  WorldStructures.h
Source/Resources/Project Files/: 64x64_sheet.aseprite  HighDefAtlas.ase  grass.aseprite  models.aseprite
Source/Resources/Skybox/: credits.txt
Source/Saves/Test World!/chunks/: -1,0
Source/Shaders/: 2DElementShaderVert.glsl  BlockRendererFrag.glsl  BlockRendererVertex.glsl  CloudFrag.glsl  LightingFrag.glsl  LightingVert.glsl  ModelRendererFrag.glsl  ModelRendererVertex.glsl  ParticleFrag.glsl  ParticleVert.glsl  SkyboxVertex.glsl
Source/Shaders/UI/: UITextVert.glsl
Todo/: Todo.txt
cmake/Hunter/: config.cmake
